# cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CodeCoverage.cmake  EmbedG3log.cmake  EmbedGtest.cmake  SetCxxStandard.cmake  toolchain-i586-mingw32.cmake  toolchain-i686-w64-mingw32.cmake  toolchain-mingw32.cmake
src/: main.cpp  sample.cpp
tests/: main.cpp  sample_test.cpp
